Additional changes, of design, and visualization.

--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stack - DataVis Pro</title>
-  <link rel="stylesheet" href="../styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <script src="../scripts/visualizations/stack.js" defer></script>
 </head>
 <body>
@@ -33,28 +33,4 @@
         </tr>
         <tr>
           <td>Pop</td>
-          <td>O(1)</td>
-        </tr>
-        <tr>
-          <td>Peek</td>
-          <td>O(1)</td>
-        </tr>
-      </table>
-    </section>
-
-    <section class="visualization">
-      <h2>Visualization</h2>
-      <canvas id="stackCanvas" width="600" height="400"></canvas>
-      <div class="controls">
-        <button onclick="pushItem()">Push</button>
-        <button onclick="popItem()">Pop</button>
-        <button onclick="peekItem()">Peek</button>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2024 DataVis Pro</p>
-  </footer>
-</body>
-</html>
+          <td>
