--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DataVis Pro</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -19,14 +19,15 @@
   <main>
     <h2>Explore Data Structures Visually</h2>
     <div class="grid">
-      <div class="card">
-        <img src="assets/images/stack-icon.png" alt="Stack Icon">
+      <div class="circle">
         <h3>Stack</h3>
-        <p>A Last-In-First-Out (LIFO) data structure.</p>
-        <a href="data-structures/stack.html">Learn More</a>
+        <a href="data-structures/stack.html">
+          <div class="icon stack-icon"></div>
+        </a>
       </div>
+      <!-- Add more circles for other structures later -->
     </div>
-  </main>
+  </main>  
 
   <footer>
     <p>© 2024 DataVis Pro</p>
