fix names files

--- a/index.html
+++ b/index.html
@@ -3,34 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DataVis Pro</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <title>Data Structures Visualization</title>
+  <meta name="description" content="Interactive data structures visualization for enhanced learning.">
+  <meta name="author" content="Your Name">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <header>
-    <h1>DataVis Pro</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
+    <h1>Data Structures Visualization</h1>
   </header>
 
   <main>
-    <h2>Explore Data Structures Visually</h2>
     <div class="grid">
+      <!-- Example: Stack -->
       <div class="circle">
-        <h3>Stack</h3>
         <a href="data-structures/stack.html">
           <div class="icon stack-icon"></div>
+          <h3>Stack</h3>
         </a>
       </div>
-      <!-- Add more circles for other structures later -->
+      <!-- Add more circles for other data structures -->
     </div>
-  </main>  
+  </main>
 
   <footer>
-    <p>© 2024 DataVis Pro</p>
+    <p>© 2024 Data Structures Visualization</p>
   </footer>
 </body>
 </html>
