--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -3,18 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stack - DataVis Pro</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <title>Stack Visualization</title>
+  <link rel="stylesheet" href="../styles/style.css">
   <script src="../scripts/visualizations/stack.js" defer></script>
 </head>
 <body>
   <header>
     <h1>Stack</h1>
-    <nav>
-      <a href="../index.html">Home</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
   </header>
 
   <main>
@@ -33,4 +28,28 @@
         </tr>
         <tr>
           <td>Pop</td>
-          <td>
+          <td>O(1)</td>
+        </tr>
+        <tr>
+          <td>Peek</td>
+          <td>O(1)</td>
+        </tr>
+      </table>
+    </section>
+
+    <section class="visualization">
+      <h2>Visualization</h2>
+      <canvas id="stackCanvas" width="600" height="400"></canvas>
+      <div class="controls">
+        <button onclick="pushItem()">Push</button>
+        <button onclick="popItem()">Pop</button>
+        <button onclick="peekItem()">Peek</button>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2024 Data Structures Visualization</p>
+  </footer>
+</body>
+</html>
