--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stack Visualization</title>
+  <meta name="description" content="Interactive stack visualization with push, pop, and peek operations.">
   <link rel="stylesheet" href="../styles/style.css">
   <script src="../scripts/visualizations/stack.js" defer></script>
 </head>
@@ -15,7 +16,7 @@
   <main>
     <section class="description">
       <h2>What is a Stack?</h2>
-      <p>A Stack is a data structure that follows the Last-In-First-Out (LIFO) principle. Common operations include Push, Pop, and Peek.</p>
+      <p>A Stack is a Last-In-First-Out (LIFO) data structure. Operations include Push, Pop, and Peek.</p>
       <h3>Time Complexity</h3>
       <table>
         <tr>
