--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Structures Visualization</title>
-  <meta name="description" content="Interactive data structures visualization for enhanced learning.">
-  <meta name="author" content="Your Name">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -16,14 +13,13 @@
 
   <main>
     <div class="grid">
-      <!-- Example: Stack -->
       <div class="circle">
         <a href="data-structures/stack.html">
           <div class="icon stack-icon"></div>
           <h3>Stack</h3>
         </a>
       </div>
-      <!-- Add more circles for other data structures -->
+      <!-- Add other data structure circles here -->
     </div>
   </main>
 
