--- a/index.html
+++ b/index.html
@@ -19,12 +19,18 @@
           <h3>Stack</h3>
         </a>
       </div>
-      <!-- Add other data structure circles here -->
+      <!-- Add more circles for other data structures -->
     </div>
   </main>
 
-  <footer>
-    <p>© 2024 Data Structures Visualization</p>
+  <footer class="footer">
+    <div class="footer-left">Data Structures Visualization</div>
+    <div class="footer-right">
+      <a href="index.html">Home</a>
+      <a href="https://github.com/erezofir" target="_blank">
+        <img src="assets/icons/github.svg" alt="GitHub" class="footer-icon">
+      </a>
+    </div>
   </footer>
 </body>
 </html>
