--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -8,9 +8,11 @@
   <script src="../scripts/visualizations/stack.js" defer></script>
 </head>
 <body>
-  <header>
-    <a href="../index.html" class="home-icon">🏠</a>
-    <h1>Stack</h1>
+  <header class="top-footer">
+    <div class="site-name">Data Structures Visualization</div>
+    <div class="tabs">
+      <a href="../index.html">Home</a>
+    </div>
   </header>
 
   <main>
@@ -33,7 +35,7 @@
     </section>
 
     <section class="box">
-      <h2>Features</h2>
+      <h2>Properties</h2>
       <ul>
         <li>Follows LIFO principle</li>
         <li>Efficient operations</li>
@@ -63,35 +65,24 @@
     <section class="box">
       <h2>Advantages and Disadvantages</h2>
       <div class="pros-cons">
-        <div class="advantages">
-          <p>✅ Simple and efficient</p>
-        </div>
-        <div class="disadvantages">
-          <p>❌ Limited by stack size</p>
-        </div>
+        <div class="advantages" style="color: darkgreen;">✅ Simple and efficient</div>
+        <div class="disadvantages" style="color: red;">❌ Limited by stack size</div>
       </div>
     </section>
 
     <section class="box">
       <h2>Possible Implementations</h2>
       <div class="implementations">
-        <div class="implementation">
+        <div class="circle implementation-icon">
           <div class="icon array-icon"></div>
           <p>Array</p>
         </div>
-        <div class="implementation">
+        <div class="circle implementation-icon">
           <div class="icon linked-list-icon"></div>
           <p>Linked List</p>
         </div>
       </div>
     </section>
   </main>
-
-  <footer class="footer">
-    <div class="footer-left">Data Structures Visualization</div>
-    <div class="footer-right">
-      <a href="../index.html">Home</a>
-    </div>
-  </footer>
 </body>
 </html>
