--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-  <header>
-    <h1>Data Structures Visualization</h1>
+  <header class="top-footer">
+    <div class="site-name">Data Structures Visualization</div>
+    <div class="tabs">
+      <a href="index.html">Home</a>
+    </div>
   </header>
 
   <main>
@@ -23,10 +26,9 @@
     </div>
   </main>
 
-  <footer class="footer">
-    <div class="footer-left">Data Structures Visualization</div>
+  <footer class="bottom-footer">
+    <div class="footer-left">© 2024 Data Structures Visualization</div>
     <div class="footer-right">
-      <a href="index.html">Home</a>
       <a href="https://github.com/erezofir" target="_blank">
         <img src="assets/icons/github.svg" alt="GitHub" class="footer-icon">
       </a>
