--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+  <!-- Top Footer -->
   <header class="top-footer">
     <div class="site-name">Data Structures Visualization</div>
     <div class="tabs">
@@ -14,18 +15,20 @@
     </div>
   </header>
 
+  <!-- Main Content -->
   <main>
     <div class="grid">
+      <!-- Stack Circle -->
       <div class="circle">
         <a href="data-structures/stack.html">
           <div class="icon stack-icon"></div>
           <h3>Stack</h3>
         </a>
       </div>
-      <!-- Add more circles for other data structures -->
     </div>
   </main>
 
+  <!-- Bottom Footer -->
   <footer class="bottom-footer">
     <div class="footer-left">© 2024 Data Structures Visualization</div>
     <div class="footer-right">
