--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -18,23 +18,16 @@
 
   <!-- Main Content -->
   <main>
-    <!-- What is it Section -->
+    <!-- Advantages and Disadvantages -->
     <section class="box">
-      <h2>What is it?</h2>
-      <div class="section-header">
-        <img src="../assets/images/stack-illustration.png" alt="Stack Illustration">
-        <p>A Stack is a Last-In-First-Out (LIFO) data structure. Operations include Push, Pop, and Peek.</p>
-      </div>
-    </section>
-
-    <!-- Visualization Section -->
-    <section class="visualization box">
-      <h2>Visualization</h2>
-      <canvas id="stackCanvas" width="800" height="500"></canvas> <!-- Larger canvas -->
-      <div class="controls">
-        <button onclick="pushItem()">Push</button>
-        <button onclick="popItem()">Pop</button>
-        <button onclick="clearAll()">Clear All</button>
+      <h2>Advantages and Disadvantages</h2>
+      <div class="pros-cons">
+        <div class="advantages">
+          <span>✅</span> <p>Simple and efficient</p>
+        </div>
+        <div class="disadvantages">
+          <span>❌</span> <p>Limited by stack size</p>
+        </div>
       </div>
     </section>
 
