--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Structures Visualization</title>
   <link rel="stylesheet" href="styles/style.css">
+  <script src="scripts/effects.js" defer></script> <!-- For typing effect -->
 </head>
 <body>
   <!-- Top Footer -->
@@ -17,6 +18,9 @@
 
   <!-- Main Content -->
   <main>
+    <h1 class="title">
+      <span id="typing-effect">Data Structures Visualization</span>
+    </h1>
     <div class="grid">
       <!-- Stack Circle -->
       <div class="circle">
