--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Structures Visualization</title>
   <link rel="stylesheet" href="styles/style.css">
-  <script src="scripts/effects.js" defer></script> <!-- For typing effect -->
+  <script src="scripts/typing-effect.js" defer></script>
 </head>
 <body>
   <!-- Top Footer -->
