--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -16,28 +16,54 @@
     </div>
   </header>
 
-    <!-- Main Content -->
-    <main>
-      <!-- What is it Section -->
-      <section class="box">
-        <h2>What is it?</h2>
-        <div class="section-header">
-          <img src="../assets/images/stack-illustration.png" alt="Stack Illustration">
-          <p>A Stack is a Last-In-First-Out (LIFO) data structure. Operations include Push, Pop, and Peek.</p>
-        </div>
-      </section>
-  
-      <!-- Visualization Section -->
-      <section class="visualization box">
-        <h2>Visualization</h2>
-        <canvas id="stackCanvas" width="800" height="500"></canvas> <!-- Larger canvas -->
-        <div class="controls">
-          <button onclick="pushItem()">Push</button>
-          <button onclick="popItem()">Pop</button>
-          <button onclick="clearAll()">Clear All</button>
-        </div>
-      </section>
-  
+  <!-- Main Content -->
+  <main>
+    <h1 class="title">Stack</h1>
+
+    <!-- What is it Section -->
+    <section class="box">
+      <h2>What is it?</h2>
+      <img src="../assets/images/stack-illustration.png" alt="Stack Illustration">
+      <p>A Stack is a Last-In-First-Out (LIFO) data structure...</p>
+    </section>
+
+    <!-- Time and Space Complexity -->
+    <section class="box">
+      <h2>Time and Space Complexity</h2>
+      <p>Operations include Push, Pop, and Peek with O(1) time complexity...</p>
+    </section>
+
+    <!-- Features -->
+    <section class="box">
+      <h2>Features</h2>
+      <ul>
+        <li>Last-In-First-Out (LIFO) order</li>
+        <li>Supports Push and Pop operations</li>
+      </ul>
+    </section>
+
+    <!-- Operations -->
+    <section class="box">
+      <h2>Operations</h2>
+      <ul>
+        <li>Push: Add an element</li>
+        <li>Pop: Remove the top element</li>
+        <li>Peek: View the top element</li>
+      </ul>
+    </section>
+
+    <!-- Visualization -->
+    <section class="visualization box">
+      <h2>Visualization</h2>
+      <canvas id="stackCanvas" width="800" height="500"></canvas>
+      <div class="controls">
+        <button onclick="pushItem()">Push</button>
+        <button onclick="popItem()">Pop</button>
+        <button onclick="clearAll()">Clear All</button>
+      </div>
+    </section>
+
+    <!-- Advantages and Disadvantages -->
     <section class="box">
       <h2>Advantages and Disadvantages</h2>
       <div class="pros-cons">
@@ -50,6 +76,21 @@
           <p>❌ Limited size</p>
           <p>❌ Lacks random access</p>
           <p>❌ Overflows on capacity</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Possible Implementations -->
+    <section class="box">
+      <h2>Possible Implementations</h2>
+      <div class="implementations">
+        <div class="circle implementation-icon">
+          <div class="icon array-icon"></div>
+          <p>Array</p>
+        </div>
+        <div class="circle implementation-icon">
+          <div class="icon linked-list-icon"></div>
+          <p>Linked List</p>
         </div>
       </div>
     </section>
