--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -20,39 +20,47 @@
   <main>
     <h1 class="title">Stack</h1>
 
-    <!-- What is it Section -->
     <section class="box">
       <h2>What is it?</h2>
-      <img src="../assets/images/stack-illustration.png" alt="Stack Illustration">
       <p>A Stack is a Last-In-First-Out (LIFO) data structure...</p>
     </section>
 
-    <!-- Time and Space Complexity -->
     <section class="box">
       <h2>Time and Space Complexity</h2>
-      <p>Operations include Push, Pop, and Peek with O(1) time complexity...</p>
+      <table>
+        <thead>
+          <tr>
+            <th>Operation</th>
+            <th>Time Complexity</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Push</td>
+            <td>O(1)</td>
+          </tr>
+          <tr>
+            <td>Pop</td>
+            <td>O(1)</td>
+          </tr>
+          <tr>
+            <td>Peek</td>
+            <td>O(1)</td>
+          </tr>
+        </tbody>
+      </table>
     </section>
 
-    <!-- Features -->
     <section class="box">
-      <h2>Features</h2>
+      <h2>Properties</h2>
       <ul>
-        <li>Last-In-First-Out (LIFO) order</li>
+        <li>Last-In-First-Out (LIFO)</li>
         <li>Supports Push and Pop operations</li>
+        <li>Can be implemented using arrays or linked lists</li>
+        <li>Simple and efficient</li>
       </ul>
     </section>
 
-    <!-- Operations -->
-    <section class="box">
-      <h2>Operations</h2>
-      <ul>
-        <li>Push: Add an element</li>
-        <li>Pop: Remove the top element</li>
-        <li>Peek: View the top element</li>
-      </ul>
-    </section>
-
-    <!-- Visualization -->
     <section class="visualization box">
       <h2>Visualization</h2>
       <canvas id="stackCanvas" width="800" height="500"></canvas>
@@ -63,24 +71,22 @@
       </div>
     </section>
 
-    <!-- Advantages and Disadvantages -->
     <section class="box">
       <h2>Advantages and Disadvantages</h2>
       <div class="pros-cons">
         <div class="advantages">
-          <p>✅ Simple to implement</p>
-          <p>✅ Efficient memory use</p>
-          <p>✅ Easy debugging</p>
+          <p>✅ Simple and efficient</p>
+          <p>✅ Easy to debug</p>
+          <p>✅ Uses minimal resources</p>
         </div>
         <div class="disadvantages">
           <p>❌ Limited size</p>
-          <p>❌ Lacks random access</p>
-          <p>❌ Overflows on capacity</p>
+          <p>❌ No random access</p>
+          <p>❌ Overflow/underflow issues</p>
         </div>
       </div>
     </section>
 
-    <!-- Possible Implementations -->
     <section class="box">
       <h2>Possible Implementations</h2>
       <div class="implementations">
