--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -20,13 +20,15 @@
   <main>
     <h1 class="title">Stack</h1>
 
+    <!-- What is it Section -->
     <section class="box">
       <h2>What is it?</h2>
-      <p>A Stack is a Last-In-First-Out (LIFO) data structure...</p>
+      <p>A Stack is a Last-In-First-Out (LIFO) data structure that supports push, pop, and peek operations...</p>
     </section>
 
+    <!-- Time Complexity -->
     <section class="box">
-      <h2>Time and Space Complexity</h2>
+      <h2>Time Complexity</h2>
       <table>
         <thead>
           <tr>
@@ -51,16 +53,19 @@
       </table>
     </section>
 
+    <!-- Properties -->
     <section class="box">
       <h2>Properties</h2>
       <ul>
-        <li>Last-In-First-Out (LIFO)</li>
-        <li>Supports Push and Pop operations</li>
+        <li>Last-In-First-Out (LIFO) principle</li>
+        <li>Supports push and pop operations</li>
+        <li>Efficient O(1) time complexity for operations</li>
         <li>Can be implemented using arrays or linked lists</li>
-        <li>Simple and efficient</li>
+        <li>Suitable for managing nested function calls</li>
       </ul>
     </section>
 
+    <!-- Visualization -->
     <section class="visualization box">
       <h2>Visualization</h2>
       <canvas id="stackCanvas" width="800" height="500"></canvas>
@@ -71,22 +76,24 @@
       </div>
     </section>
 
+    <!-- Advantages and Disadvantages -->
     <section class="box">
       <h2>Advantages and Disadvantages</h2>
       <div class="pros-cons">
         <div class="advantages">
           <p>✅ Simple and efficient</p>
           <p>✅ Easy to debug</p>
-          <p>✅ Uses minimal resources</p>
+          <p>✅ Minimal memory overhead</p>
         </div>
         <div class="disadvantages">
-          <p>❌ Limited size</p>
-          <p>❌ No random access</p>
+          <p>❌ Limited size (bounded stack)</p>
+          <p>❌ No random access to elements</p>
           <p>❌ Overflow/underflow issues</p>
         </div>
       </div>
     </section>
 
+    <!-- Possible Implementations -->
     <section class="box">
       <h2>Possible Implementations</h2>
       <div class="implementations">
