--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -23,12 +23,12 @@
     <!-- What is it Section -->
     <section class="box">
       <h2>What is it?</h2>
-      <p>A Stack is a Last-In-First-Out (LIFO) data structure that supports push, pop, and peek operations...</p>
+      <p>A Stack is a Last-In-First-Out (LIFO) data structure that supports operations like push, pop, and peek...</p>
     </section>
 
     <!-- Time Complexity -->
     <section class="box">
-      <h2>Time Complexity</h2>
+      <h2>Time and Space Complexity</h2>
       <table>
         <thead>
           <tr>
@@ -57,11 +57,11 @@
     <section class="box">
       <h2>Properties</h2>
       <ul>
-        <li>Last-In-First-Out (LIFO) principle</li>
-        <li>Supports push and pop operations</li>
-        <li>Efficient O(1) time complexity for operations</li>
-        <li>Can be implemented using arrays or linked lists</li>
-        <li>Suitable for managing nested function calls</li>
+        <li>Follows Last-In-First-Out (LIFO) principle.</li>
+        <li>Supports efficient O(1) operations for push and pop.</li>
+        <li>Can be implemented using arrays or linked lists.</li>
+        <li>Used for managing nested function calls and recursion.</li>
+        <li>Simple and memory-efficient structure.</li>
       </ul>
     </section>
 
@@ -82,13 +82,13 @@
       <div class="pros-cons">
         <div class="advantages">
           <p>✅ Simple and efficient</p>
-          <p>✅ Easy to debug</p>
           <p>✅ Minimal memory overhead</p>
+          <p>✅ Easy debugging and testing</p>
         </div>
         <div class="disadvantages">
-          <p>❌ Limited size (bounded stack)</p>
+          <p>❌ Limited size (in bounded stacks)</p>
           <p>❌ No random access to elements</p>
-          <p>❌ Overflow/underflow issues</p>
+          <p>❌ Overflow and underflow issues</p>
         </div>
       </div>
     </section>
