Starting to take shape. More design changes

--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -65,6 +65,17 @@
       </ul>
     </section>
 
+    <!-- Operations Section -->
+    <section class="box">
+      <h2>Operations</h2>
+      <ul>
+        <li>Push: Add an element to the stack.</li>
+        <li>Pop: Remove the top element from the stack.</li>
+        <li>Peek: View the top element of the stack without removing it.</li>
+      </ul>
+    </section>
+    
+
     <!-- Visualization -->
     <section class="visualization box">
       <h2>Visualization</h2>
