--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Structures Visualization</title>
   <link rel="stylesheet" href="styles/style.css">
-  <script src="scripts/typing-effect.js" defer></script>
 </head>
 <body>
   <!-- Top Footer -->
@@ -18,15 +17,13 @@
 
   <!-- Main Content -->
   <main>
-    <h1 class="title">
-      <span id="typing-effect">Data Structures Visualization</span>
-    </h1>
+    <h1 class="static-title">Data Structures Visualization</h1>
     <div class="grid">
       <!-- Stack Circle -->
       <div class="circle">
         <a href="data-structures/stack.html">
-          <div class="icon stack-icon"></div>
-          <h3>Stack</h3>
+          <div class="icon stack-icon animated-icon"></div>
+          <h3 class="stack-title">Stack</h3>
         </a>
       </div>
     </div>
