--- a/index.html
+++ b/index.html
@@ -17,26 +17,25 @@
 
   <!-- Main Content -->
   <main>
-    <h1 class="static-title">Data Structures Visualization</h1>
-    <div class="grid">
-      <!-- Stack Circle -->
-      <div class="circle">
-        <a href="data-structures/stack.html">
-          <div class="icon stack-icon animated-icon"></div>
-          <h3 class="stack-title">Stack</h3>
-        </a>
+    <div class="home-content">
+      <h1 class="main-title">Data Structures Visualization</h1>
+      <div class="grid">
+        <!-- Stack Circle -->
+        <div class="circle">
+          <a href="data-structures/stack.html">
+            <div class="icon stack-icon animated-icon"></div>
+            <h3 class="stack-title">Stack</h3>
+          </a>
+        </div>
       </div>
     </div>
   </main>
 
-  <!-- Bottom Footer -->
-  <footer class="bottom-footer">
-    <div class="footer-left">© 2024 Data Structures Visualization</div>
-    <div class="footer-right">
-      <a href="https://github.com/erezofir" target="_blank">
-        <img src="assets/icons/github.svg" alt="GitHub" class="footer-icon">
-      </a>
-    </div>
-  </footer>
+  <!-- Git Icon -->
+  <div class="git-icon">
+    <a href="https://github.com/erezofir" target="_blank">
+      <img src="assets/icons/git-circle.svg" alt="GitHub">
+    </a>
+  </div>
 </body>
 </html>
