--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -20,7 +20,7 @@
   <main>
     <div class="stack-header">
       <h1 class="title">Stack</h1>
-      <img src="../assets/images/stack.png" alt="stack-image" class="stack-image">
+      <img src="../assets/icons/stack-image.png" alt="stack Illustration" class="stack-image">
     </div>
 
     <!-- What is it Section -->
