--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Main Content -->
   <main>
     <div class="home-content">
-      <h1 class="main-title">Data Structures Visualization</h1>
+      <h1 class="main-title">Data Structures</h1>
       <div class="grid">
         <!-- Stack Circle -->
         <div class="circle">
