--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -82,13 +82,13 @@
     <!-- Visualization Section -->
     <section class="visualization box">
       <h2>Visualization</h2>
-      <canvas id="stackCanvas" width="300" height="400"></canvas>
+      <canvas id="stackCanvas" width="400" height="250"></canvas>
       <div class="controls">
         <button onclick="pushItem()">Push</button>
         <button onclick="popItem()">Pop</button>
         <button onclick="clearAll()">Clear All</button>
       </div>
-    </section>
+    </section
 
     <!-- Advantages and Disadvantages -->
     <section class="box">
@@ -122,5 +122,12 @@
       </div>
     </section>
 
+    <!-- Git Icon -->
+    <div class="git-icon">
+      <a href="https://github.com/erezofir" target="_blank">
+        <img src="../assets/icons/git-circle.svg" alt="GitHub">
+      </a>
+    </div>
+  </main>
 </body>
 </html>
