--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <title>Data Structures Visualization</title>
   <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="home">
+  <!-- Decorations -->
+  <div class="decorations"></div>
+
   <!-- Top Footer -->
   <header class="top-footer">
     <div class="site-name">Data Structures Visualization</div>
