--- a/data-structures/stack.html
+++ b/data-structures/stack.html
@@ -90,9 +90,9 @@
       </div>
     </section
 
-    <!-- Advantages and Disadvantages -->
+    <!-- pros-cons -->
     <section class="box">
-      <h2>Advantages and Disadvantages</h2>
+      <h2>Pros and Cons</h2>
       <div class="pros-cons">
         <div class="advantages">
           <p>✅ Simple and efficient</p>
