--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="home">
-  <!-- Decorations -->
-  <div class="decorations"></div>
-
   <!-- Top Footer -->
   <header class="top-footer">
     <div class="site-name">Data Structures Visualization</div>
@@ -26,8 +23,43 @@
         <!-- Stack Circle -->
         <div class="circle">
           <a href="data-structures/stack.html">
-            <div class="icon stack-icon animated-icon"></div>
-            <h3 class="stack-title">Stack</h3>
+            <div class="icon" style="background-image: url('assets/icons/stack.svg');"></div>
+            <h3>Stack</h3>
+          </a>
+        </div>
+        <!-- Array Circle -->
+        <div class="circle">
+          <a href="data-structures/array.html">
+            <div class="icon" style="background-image: url('assets/icons/array.svg');"></div>
+            <h3>Array</h3>
+          </a>
+        </div>
+        <!-- Queue Circle -->
+        <div class="circle">
+          <a href="data-structures/queue.html">
+            <div class="icon" style="background-image: url('assets/icons/queue.svg');"></div>
+            <h3>Queue</h3>
+          </a>
+        </div>
+        <!-- Hash Table Circle -->
+        <div class="circle">
+          <a href="data-structures/hash-table.html">
+            <div class="icon" style="background-image: url('assets/icons/hash-table.svg');"></div>
+            <h3>Hash Table</h3>
+          </a>
+        </div>
+        <!-- Tree Circle -->
+        <div class="circle">
+          <a href="data-structures/tree.html">
+            <div class="icon" style="background-image: url('assets/icons/tree.svg');"></div>
+            <h3>Tree</h3>
+          </a>
+        </div>
+        <!-- Graph Circle -->
+        <div class="circle">
+          <a href="data-structures/graph.html">
+            <div class="icon" style="background-image: url('assets/icons/graph.svg');"></div>
+            <h3>Graph</h3>
           </a>
         </div>
       </div>
