--- a/index.html
+++ b/index.html
@@ -19,43 +19,48 @@
   <!-- Main Content -->
   <main>
     <h1 class="main-title">Data Structures</h1>
-    <div class="scattered-layout">
-      <!-- Example Circle -->
-      <div class="circle fall-animation" style="left: 10%; top: 5%;">
-        <a href="data-structures/stack.html">
-          <div class="icon" style="background-image: url('assets/icons/stack.svg');"></div>
-          <h3>Stack</h3>
-        </a>
+    <div class="pyramid-structure">
+      <div class="pyramid-row">
+        <div class="circle fall-animation">
+          <a href="data-structures/stack.html">
+            <div class="icon" style="background-image: url('assets/icons/stack.svg');"></div>
+            <h3>Stack</h3>
+          </a>
+        </div>
       </div>
-      <div class="circle fall-animation" style="left: 50%; top: 10%;">
-        <a href="data-structures/array.html">
-          <div class="icon" style="background-image: url('assets/icons/array.svg');"></div>
-          <h3>Array</h3>
-        </a>
+      <div class="pyramid-row">
+        <div class="circle fall-animation">
+          <a href="data-structures/queue.html">
+            <div class="icon" style="background-image: url('assets/icons/queue.svg');"></div>
+            <h3>Queue</h3>
+          </a>
+        </div>
+        <div class="circle fall-animation">
+          <a href="data-structures/array.html">
+            <div class="icon" style="background-image: url('assets/icons/array.svg');"></div>
+            <h3>Array</h3>
+          </a>
+        </div>
       </div>
-      <div class="circle fall-animation" style="left: 35%; top: 20%;">
-        <a href="data-structures/queue.html">
-          <div class="icon" style="background-image: url('assets/icons/queue.svg');"></div>
-          <h3>Queue</h3>
-        </a>
-      </div>
-      <div class="circle fall-animation" style="left: 70%; top: 30%;">
-        <a href="data-structures/hash-table.html">
-          <div class="icon" style="background-image: url('assets/icons/hash-table.svg');"></div>
-          <h3>Hash Table</h3>
-        </a>
-      </div>
-      <div class="circle fall-animation" style="left: 25%; top: 40%;">
-        <a href="data-structures/tree.html">
-          <div class="icon" style="background-image: url('assets/icons/tree.svg');"></div>
-          <h3>Tree</h3>
-        </a>
-      </div>
-      <div class="circle fall-animation" style="left: 80%; top: 50%;">
-        <a href="data-structures/graph.html">
-          <div class="icon" style="background-image: url('assets/icons/graph.svg');"></div>
-          <h3>Graph</h3>
-        </a>
+      <div class="pyramid-row">
+        <div class="circle fall-animation">
+          <a href="data-structures/tree.html">
+            <div class="icon" style="background-image: url('assets/icons/tree.svg');"></div>
+            <h3>Tree</h3>
+          </a>
+        </div>
+        <div class="circle fall-animation">
+          <a href="data-structures/hash-table.html">
+            <div class="icon" style="background-image: url('assets/icons/hash-table.svg');"></div>
+            <h3>Hash Table</h3>
+          </a>
+        </div>
+        <div class="circle fall-animation">
+          <a href="data-structures/graph.html">
+            <div class="icon" style="background-image: url('assets/icons/graph.svg');"></div>
+            <h3>Graph</h3>
+          </a>
+        </div>
       </div>
     </div>
   </main>
