adding heap and linked list

--- a/index.html
+++ b/index.html
@@ -61,6 +61,22 @@
               <h3>Graph</h3>
             </a>
           </div>
+          <div class="pyramid-row">
+            <!-- Existing rows -->
+            <div class="circle fall-animation">
+              <a href="data-structures/heap.html">
+                <div class="icon" style="background-image: url('assets/icons/heap.svg');"></div>
+                <h3>Heap</h3>
+              </a>
+            </div>
+            <div class="circle fall-animation">
+              <a href="data-structures/linked-list.html">
+                <div class="icon" style="background-image: url('assets/icons/linked-list.svg');"></div>
+                <h3>Linked List</h3>
+              </a>
+            </div>
+          </div>
+          
         </div>
       </div>
       
